--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -230,5 +230,59 @@
       height: 14px;
       background-position: -517px -18px;
     }
+
+    &-chair {
+      width: 15px;
+      height: 15px;
+      background-position: -624px -17px;
+    }
+
+    &-bag {
+      width: 15px;
+      height: 15px;
+      background-position: -653px -17px;
+    }
+
+    &-marker {
+      width: 10px;
+      height: 15px;
+      background-position: -680px -15px;
+    }
+
+    &-hotel-in {
+      width: 25px;
+      height: 18px;
+      background-position: -707px -13px;
+    }
+
+    &-hotel-in {
+      width: 25px;
+      height: 18px;
+      background-position: -743px -13px;
+    }
+
+    &-waiting {
+      width: 17px;
+      height: 20px;
+      background-position: -695px -93px;
+    }
+
+    &-gear {
+      width: 33px;
+      height: 33px;
+      background-position: -730px -84px;
+    }
+
+    &-wifi {
+      width: 17px;
+      height: 13px;
+      background-position: -459px -17px;
+    }
+
+    &-star {
+      width: 12px;
+      height: 12px;
+      background-position: -490px -18px;
+    }
   }
 }
