--- a/app/less/web/flights.less
+++ b/app/less/web/flights.less
@@ -358,3 +358,17 @@
     }
   }
 }
+
+.flight-payment-step-1 {
+  #btnAddMorePassenger {
+    text-shadow: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .ssl-message {
+    p {
+      width: 480px;
+    }
+  }
+}
