--- a/app/less/web/navbar.less
+++ b/app/less/web/navbar.less
@@ -116,6 +116,71 @@
     padding: 7px 20px 7px 10px;
     height: auto !important;
     display: block;
+
+    &.md {
+      padding-top: 20px;
+    }
   }
 }
 
+
+.payment-nav {
+  padding: 39px 0;
+}
+
+.payment-step {
+  width: 589px;
+  height: 42px;
+
+  &-1 {
+    background: url(../img/flight-payment-step-1.png) no-repeat 0 0;
+  }
+
+  &-2 {
+    background: url(../img/flight-payment-step-2.png) no-repeat 0 0;
+  }
+
+  &-3 {
+    background: url(../img/flight-payment-step-3.png) no-repeat 0 0;
+  }
+
+  &-4 {
+    background: url(../img/flight-payment-step-4.png) no-repeat 0 0;
+  }
+
+  &-5 {
+    background: url(../img/flight-payment-step-5.png) no-repeat 0 0;
+  }
+
+
+
+  a {
+    display: block;
+    float: left;
+    width: 117px;
+    line-height: 42px;
+    text-align: center;
+    font-family: "Gotham Black";
+    color: #01414c;
+    text-shadow: 1px 2px 0px rgba(61, 153, 169, 0.2);
+    padding-left: 20px;
+
+    &:last-child {
+      padding-left: 0;
+    }
+
+    &:hover {
+      color: #fff;
+      text-shadow: 1px 2px 0px rgba(0, 0, 0, 0.2);
+    }
+
+    &.active {
+      color: #000;
+      text-shadow: none;
+
+      &:hover {
+        text-shadow: none;
+      }
+    }
+  }
+}
