--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -193,6 +193,7 @@ a.text-orange {color: #ef9630}
 .m-l-md{margin-left: 20px;}
 .m-l-lg{margin-left: 30px;}
 .m-l-xl{margin-left: 40px;}
+.m-l-xxl{margin-left: 50px;}
 
 .m-l-n-xxs{margin-left: -1px}
 .m-l-n-xs{margin-left: -5px}
@@ -228,6 +229,7 @@ a.text-orange {color: #ef9630}
 .m-r-md{margin-right: 20px}
 .m-r-lg{margin-right: 30px}
 .m-r-xl{margin-right: 40px}
+.m-r-xxl{margin-left: 50px;}
 
 .m-r-n-xxs{margin-right: -1px}
 .m-r-n-xs{margin-right: -5px}
