--- a/app/less/web/booking.less
+++ b/app/less/web/booking.less
@@ -115,8 +115,8 @@
 
     ul {
       background: #fff;
-      -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 0px 3px 2px rgba(0, 0, 0, 0.1);
-      box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 0px 3px 2px rgba(0, 0, 0, 0.1);
+      -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 1px 4px 1px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 1px 4px 1px rgba(0, 0, 0, 0.1);
 
       li {
         position: relative;
@@ -129,6 +129,12 @@
           line-height: 20px !important;
           font-size: 15px;
         }
+      }
+
+      &.bg-yellow {
+        -webkit-box-shadow: 0px 0px 0px 1px rgba(227, 222, 153, 1), 1px 1px 4px 1px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 0px 1px rgba(227, 222, 153, 1), 1px 1px 4px 1px rgba(0, 0, 0, 0.1);
+        background-color: #ffffcc;
       }
     }
 
@@ -275,6 +281,45 @@
       line-height: 18px;
       color: #939393;
       font-size: 11px;
+
+      a {
+        color: #e67b00
+      }
+
+      &.text-dark {
+        color: #000;
+      }
+
+      .text-sm {
+        font-size: 12px;
+      }
+    }
+
+    .btn-primary {
+      width: 100%;
+      padding: 15px;
+      border-radius: 4px;
+      color: #fff;
+      -webkit-box-shadow: 0px -2px 0px 0px #50aaba;
+      box-shadow: 0px -2px 0px 0px #50aaba;
+    }
+  }
+
+  .flight-payment-step-2 {
+    .aside {
+      padding-left: 0;
+      width: 100%;
+      background: none;
+
+      .outbound-flight,
+      .inbound-flight {
+        width: 320px;
+      }
+
+      ul {
+        -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 2px 3px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 2px 3px 2px rgba(0, 0, 0, 0.1)
+      }
     }
   }
 
