--- a/app/less/web/flights.less
+++ b/app/less/web/flights.less
@@ -365,10 +365,148 @@
     padding-top: 5px;
     padding-bottom: 5px;
   }
+}
+.flight-payment-step-2 {
+  .passenger-item {
+    -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+    box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+    height: 74px;
+    min-height: 74px;
+    height: auto !important;
+
+    .column {
+      padding: 13px 22px 15px;
+      float: left;
+      height: 74px;
+      min-height: 74px;
+      height: auto !important;
+      border-color: #d8d8d8;
+
+      label {
+        font-size: 11px;
+        margin-bottom: 0;
+        color: #888;
+        font-family: "Gotham Black"
+      }
+
+      .number {
+        color: #d9d9d9;
+        font-size: 31px;
+        font-family: "Gotham Black";
+        top: 20px;
+        line-height: 22px;
+        position: absolute;
+        left: 13px;
+      }
+
+      &:first-child {
+        padding-left: 68px;
+        width: 255px;
+      }
+
+      &:nth-child(2) {
+        width: 133px;
+      }
+
+      &:nth-child(3) {
+        width: 140px;
+      }
+
+      &:nth-child(4) {
+        width: 135px;
+      }
+    }
+  }
+}
+
+.ssl-message {
+  p {
+    width: 74%;
+  }
+}
+
+.flight-payment-step-5 {
+  font-size: 13px;
+
+  .section-title {
+    .booking-page .section-title
+  }
+
+  .ticket-header {
+    background: #f4f4f2;
+    height: 36px;
+    line-height: 36px;
+    margin-bottom: 70px;
+
+     .order-number {
+      width: 160px;
+      text-align: center;
+    }
+
+    .departure,
+    .return {
+      padding-left: 20px;
+    }
+
+    .departure {
+      width: 377px;
+    }
+
+    .departure,
+    .order-number {
+      border-right: 2px solid #fff;
+    }
+  }
+
+  .ticket-has-created {
+    background-color: #f4f4f2;
+    padding: 35px;
+    font-size: 13px;
+  }
 
   .ssl-message {
+    border-top: 1px dashed #e5e5e5;
+
     p {
-      width: 480px;
+      width: 80%;
+      padding-top: 14px;
+      font-size: 11px;
+    }
+  }
+
+  .tanda-bukti-pemesanan {
+    padding: 50px 80px;
+    -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 2px 6px 1px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 2px 6px 1px rgba(0, 0, 0, 0.1);
+
+    .f-bold {
+      font-size: 15px;
+    }
+
+    .info {
+      width: 50%;
+      height: 270px;
+      border-color: #e6e6e6;
+
+      &.right {
+        padding-left: 48px;
+        line-height: 23px;
+      }
+    }
+
+    ol {
+      margin-left: 0;
+      padding-left: 16px;
+      width: 100%;
+    }
+  }
+
+  .message-customer-service {
+    color: #999;
+    font-size: 11px;
+
+    a {
+      color: #ff9966
     }
   }
 }
