document page and flag assets

--- a/app/jade/include/mixin.jade
+++ b/app/jade/include/mixin.jade
@@ -65,14 +65,14 @@ mixin headerActive(current)
                 i.ico.ico-hotel
                 span.block BOOK HOTELS
 
-          if (current == "documents")
+          if (current == "document")
             li(class="active")
-              a(href='#documents')
+              a(href='document.html')
                 i.ico.ico-document
                 span.block DOCUMENTS
           else
             li
-              a(href='#documents')
+              a(href='document.html')
                 i.ico.ico-document
                 span.block DOCUMENTS
 
