--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -5520,6 +5520,92 @@ html[xmlns] .flexslider .slides {
 .flight-payment-step-5 .message-customer-service a {
   color: #ff9966;
 }
+.document-page {
+  overflow-x: hidden;
+}
+.document-page .head-title {
+  font-family: "Gotham Black";
+  font-size: 30px;
+}
+.document-page .head-title {
+  font-size: 36px;
+  line-height: 177px;
+  margin: 0;
+  font-family: "Gotham Black";
+  background: url(../img/heading_document_title_bg.png) no-repeat center center;
+}
+.document-page .banner {
+  height: 177px;
+  background: url(../img/heading_document.jpg) repeat-x top center;
+}
+.document-page .display-table {
+  display: table;
+}
+.document-page .display-cell {
+  display: table-cell;
+  vertical-align: top;
+}
+.document-page .content-left {
+  position: relative;
+  z-index: 1;
+  width: 700px;
+  padding-right: 33px;
+  background-color: #fff;
+}
+.document-page .content-left article {
+  padding-top: 55px;
+  line-height: 24px;
+}
+.document-page .content-left article p {
+  margin-bottom: 30px;
+}
+.document-page .content-left article h5 {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.document-page .content-left h3 {
+  font-size: 30px;
+  margin-top: 0;
+}
+.document-page .flags-list .flag-item {
+  -webkit-box-shadow: 0px 0px 0px 1px #dadada, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+  box-shadow: 0px 0px 0px 1px #dadada, 0px 1px 3px 2px rgba(216, 216, 216, 0.5);
+  padding: 25px;
+  height: 84px;
+}
+.document-page .flags-list .flag-item img {
+  display: inline-block;
+  vertical-align: top;
+}
+.document-page .flags-list .flag-item span {
+  font-size: 15px;
+  line-height: 34px;
+}
+.document-page .aside {
+  width: 240px;
+  background: #f4f4f4;
+  padding-left: 35px;
+  position: relative;
+}
+.document-page .aside ul {
+  margin-top: 55px;
+}
+.document-page .aside ul li {
+  display: block;
+  margin-bottom: 15px;
+}
+.document-page .aside a {
+  color: #353535;
+  text-decoration: underline;
+}
+.document-page .aside a:hover {
+  color: #999999;
+  text-decoration: none;
+}
+.document-page .aside a.active {
+  color: #b2b2b2;
+  text-decoration: none;
+}
 .datepicker {
   border-radius: 4px;
   color: #000;
